crates/biome_js_analyze/tests/specs/nursery/noPlaywrightForceOption/invalid/select-option-force.js
/* should generate diagnostics */
// Test selectOption with force option (it has different signature with first options argument)
await page.locator("select").selectOption({ label: "Blue" }, { force: true });

await page.locator("select").selectOption("value", { force: true });

await page.locator("select").selectOption(["option1", "option2"], { force: true });
